# crossmux

./: .gitignore  .gitmodules  AGENTS.md  GOVERNANCE.md  README.en.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh.md  SCOPE.md  USER_GUIDE.md  platformio.ini
.claude/skills/: README.md
.claude/skills/sync-upstream/: SKILL.md
.cursor/skills/: README.md
.cursor/skills/hal-and-abstractions/: SKILL.md
.cursor/skills/heap-discipline/: SKILL.md
.github/workflows/: nightly.yml  release-fonts.yml  release.yml  sync-build.yml  sync-upstream.yml
.skills/: SKILL.md
docs/: agent-monitor.md  chinese-build.md  file-formats.md  i18n.md  sd-card-fonts.md  troubleshooting.md  webserver-endpoints.md  webserver.md
docs/contributing/: README.md  architecture.md  getting-started.md  testing-debugging.md
docs/engineering/: architecture-and-patterns.md  build-system.md  cache-management.md  chinese-build.md  coding-standards.md  device-variants.md  esp32-pitfalls.md  generated-files.md  git-workflow.md  hardware-constraints.md  index.md  japanese-korean-build.md  memory-and-allocation.md  testing-and-debugging.md  ui-and-input.md  upstream-merge-policy.md
lib/AvatarGen/: AvatarGen.cpp  AvatarGen.h  AvatarGenerator.cpp  AvatarGenerator.h  Bezier.cpp  Bezier.h  EyeShape.cpp  EyeShape.h  FaceShape.cpp  FaceShape.h  HairLines.cpp  HairLines.h  MouthShape.cpp  MouthShape.h  Nose.cpp  Nose.h  README.md  Render.cpp  Render.h
lib/EpdFont/: CjkVersion.h  EpdFont.cpp  EpdFont.h  EpdFontData.h  EpdFontFamily.cpp  EpdFontFamily.h  FontDecompressor.cpp  FontDecompressor.h  ScToTcRemap.h  SdCardFont.cpp  SdCardFont.h  TcToScRemap.h  library.json
lib/EpdFont/builtinFonts/: all.h  chinese_chess_16.h  notosans_cjk_10.h  notosans_cjk_12.h  notosans_cjk_16.h  notosans_cjk_18.h  notosans_cjk_8.h  notosans_ja_10.h  notosans_ja_12.h  notosans_ja_14.h  notosans_ja_16.h  notosans_ja_18.h  notosans_ja_8.h  notosans_ko_10.h  notosans_ko_12.h  notosans_ko_14.h  notosans_ko_16.h  notosans_ko_18.h  notosans_ko_8.h  notosans_sc_10.h  notosans_sc_12.h  notosans_sc_16.h  notosans_sc_18.h  notosans_sc_8.h
lib/EpdFont/scripts/: build-cn-builtin-fonts.sh  build-ebgaramond-cjk-sd.sh  build-font-ids.sh  build-ja-builtin-fonts.sh  build-ko-builtin-fonts.sh  build-sc-builtin-fonts.sh  build-sd-fonts.py  build_cn_charset.py  build_ja_charset.py  build_ko_charset.py  build_sc_to_tc_remap.py  build_tc_to_sc_remap.py  chars_ebgaramond_extra.txt  chars_jis_l1l2_6355.txt  chars_joyo_2136.txt  chars_ko_common_large.txt  chars_ko_jamo.txt  chars_kyoiku_1026.txt  cn_almanac_chars.txt  cn_common_chars.txt  cn_i18n_chars.txt  cn_weread_chars.txt  convert-builtin-fonts.sh  fontconvert.py  fontconvert_sdcard.py  ja_common_chars.txt  ja_i18n_chars.txt  ko_common_chars.txt  ko_i18n_chars.txt  ko_ui_chars.txt  requirements.txt  sc_common_chars.txt  sc_i18n_chars.txt  sd-fonts.yaml
lib/Epub/: Epub.cpp  Epub.h
lib/Epub/Epub/: BookMetadataCache.cpp  BookMetadataCache.h  CjkKinsoku.h  CjkPunctCompression.h  Page.cpp  ParsedText.cpp  ParsedText.h  Section.cpp  Section.h  VerticalPunctuation.h
lib/FsHelpers/: FsHelpers.cpp  FsHelpers.h
lib/GfxRenderer/: DirectPixelWriter.h  GfxRenderer.cpp  GfxRenderer.h
lib/I18n/: I18n.cpp  I18n.h
lib/I18n/translations/: belarusian.yaml  catalan.yaml  chinese.yaml  czech.yaml  danish.yaml  dutch.yaml  english.yaml  finnish.yaml  french.yaml  german.yaml  hebrew.yaml  hungarian.yaml  italian.yaml  japanese.yaml  kazakh.yaml  korean.yaml  lithuanian.yaml  polish.yaml  portuguese.yaml  romanian.yaml  russian.yaml  simplified_chinese.TODO.md  simplified_chinese.yaml  slovak.yaml  slovenian.yaml  (+6 more)
lib/JpegToBmpConverter/: JpegToBmpConverter.cpp
lib/KOReaderSync/: KOReaderCredentialStore.cpp  KOReaderCredentialStore.h  KOReaderSyncClient.h
lib/OpdsParser/: OpdsParser.cpp
lib/Txt/: Txt.cpp
lib/Utf8/: Utf8.h
lib/hal/: HalClock.cpp  HalClock.h  HalStorage.cpp  HalStorage.h
scripts/: gen_boot_logo.py  gen_i18n.py
simulator/: .gitignore  CMakeLists.txt  README.md  build_wasm.sh  force_includes.h  missing_symbols.cpp  simulator_bitmap_font.h  simulator_firmware.h  simulator_main.cpp  simulator_main_wasm.cpp  simulator_overlay.cpp  simulator_overlay.h  simulator_settings.cpp  simulator_settings.h  simulator_shell.cpp  simulator_shell.h  simulator_window.cpp  simulator_window.h
simulator/arduino-host/examples/blink_headless/: main.cpp
simulator/arduino-host/include/: Stream.h  esp_mac.h  esp_sleep.h
simulator/arduino-host/src/: arduino_runtime.cpp  freertos_pthread.cpp  hardware_serial.cpp
simulator/hal/: HalClock.cpp  HalDisplay.cpp  HalGPIO.cpp  HalPowerManager.cpp  HalStorage.cpp  HalSystem.cpp  HalTiltSensor.cpp
simulator/hal_native/: HalDisplay_native.cpp  HalGPIO_native.cpp
simulator/sd_root_demo/: alice-in-wonderland.epub  人工衞星の發射地.epub
simulator/sd_root_ja/: sample_ja.txt
simulator/sd_root_ko/: sample_ko.txt
simulator/shims/: BatteryMonitor.h  EInkDisplay.h  HTTPClient.h  JPEGDEC.h  NetworkClientSecure.h  PNGdec.h  SDCardManager.h  WebSocketsServer.h  WiFi.h
src/: CrossPointSettings.cpp  CrossPointSettings.h  CrossPointState.cpp  CrossPointState.h  JsonSettingsIO.cpp  MappedInputManager.cpp  MappedInputManager.h  OpdsServerStore.cpp  OpdsServerStore.h  SdCardFontSystem.cpp  SdCardFontSystem.h  SettingsList.h  WifiCredentialStore.cpp  fontIds.h  main.cpp
src/activities/: ActivityManager.cpp  ActivityManager.h  ActivityResult.h
src/components/: OptionPopup.h
src/images/: Logo120.h
src/network/: CrossPointWebServer.cpp  CrossPointWebServer.h  HttpDownloader.cpp  HttpDownloader.h  OtaUpdater.cpp
src/util/: HeaderDateUtils.h  NextBookFinder.cpp  NextBookFinder.h
test/: CMakeLists.txt
test/cjk_kinsoku/: CMakeLists.txt  CjkKinsokuTest.cpp
test/cjk_punct_compression/: CMakeLists.txt  CjkPunctCompressionTest.cpp
test/differential_rounding/: DifferentialRoundingTest.cpp
test/epubs/: test_text_decorations.epub
test/release_json_parser/: ReleaseJsonParserTest.cpp
test/vertical_punctuation/: CMakeLists.txt  VerticalPunctuationTest.cpp
(+207 files in other folders)
